chore: 스킬 리팩토링 (SKILL.md 간소화 및 템플릿 파일 분리)